tests/syntax_errors/unterminated_function.out
error: unterminated_function.li 2,1: unexpected token `eof`, expecting `r_brace`
    2 | 
      | ^
